Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-23163

Qt Creator loses Run configurations when project outputs changes across build configurations

XMLWordPrintable

    • b1876052b (master)

      I have a project where the output type depends of the configuration.

      Basically if I run just "qmake" it builds an executable, but if I run "qmake CONFIG+=build_as_lib", it builds a library.

       

      The issue is that if I have set multiple build configurations, some that builds the executable and some that builds the library, each time I alternate between them Qt Creator loses all the Run configuration for the executable.

       

      For instance:

      1. In "Run Settings", edit the run configuration by adding command line arguments or cloning the run configuration or checking the "Run in terminal" option or ...
      2. In "Build Settings" edit the "Profile" configuration and add "CONFIG+=build_as_lib" to the qmake step.
      3. Switch back to the "Debug" configuration
      4. Go back to the Run Settings, all changes have been lost.

        For Gerrit Dashboard: QTCREATORBUG-23163
        # Subject Branch Project Status CR V

            kandeler Christian Kandeler
            bterrier Benjamin Terrier
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes