src/libs/utils/displayname.h
@@ -22,6 +22,7 @@ public:
     QString value() const;
     QString defaultValue() const { return m_defaultValue; }
     bool usesDefaultValue() const;
+    void forceSerialization() { m_forceSerialization = true; }
 
     void toMap(QVariantMap &map, const QString &key) const;
     void fromMap(const QVariantMap &map, const QString &key);
@@ -29,6 +30,7 @@ public:
 private:
     QString m_value;
     QString m_defaultValue;
+    bool m_forceSerialization = false;
 };
 
 bool QTCREATOR_UTILS_EXPORT operator==(const DisplayName &dn1, const DisplayName &dn2);
