src/plugins/projectexplorer/target.h
@@ -131,6 +131,7 @@ signals:
     void removedRunConfiguration(ProjectExplorer::RunConfiguration *rc);
     void addedRunConfiguration(ProjectExplorer::RunConfiguration *rc);
     void activeRunConfigurationChanged(ProjectExplorer::RunConfiguration *rc);
+    void runConfigurationsUpdated();
 
     void removedBuildConfiguration(ProjectExplorer::BuildConfiguration *bc);
     void addedBuildConfiguration(ProjectExplorer::BuildConfiguration *bc);
